fix image load issue